fix top padding on mobile

--- a/changedetectionio/static/styles/styles.scss
+++ b/changedetectionio/static/styles/styles.scss
@@ -426,6 +426,16 @@ footer {
 
 @media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 800px) {
 
+  div.sticky-tab#hosted-sticky {
+    top: 60px;
+    left: 0px;
+    right: auto;
+  }
+
+  section.content {
+    padding-top: 110px;
+  }
+
   // Make the tabs easier to hit, they will be all nice and horizontal
   div.tabs ul li {
     display: block;
